[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
datamodel = { path = "../datamodel" }
command = { path = "../command" }


tokio = { version = "1.4", default-features = false, features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3" , default-features = false, features = ["sink",  "std"] }
futures-channel = "0.3"


serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"