[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.4", default-features = false, features = ["full"] }
tokio-tungstenite = "0.26.2"
log = "0.4.27"
futures-util = { version = "0.3" , default-features = false, features = ["sink",  "std"] }
env_logger = "0.11.8"
futures-channel = "0.3"
