

[package]
name = "wasm"
description = "wasm api for the data model"

version.workspace = true
edition.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["console_error_panic_hook"]



[dependencies]
datamodel = { path = "../datamodel" }
command = { path = "../command" }
render = { path = "../render" }


js-sys = "0.3.77"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version="0.3.77"
features=[
  'Document',
  'Window',
  'SvgElement',
]